add swiger to category
