# app/Http/Controllers/Api/CategoryController.php
@@ -16,21 +16,70 @@ class CategoryController extends Controller
     /**
      * Display a listing of the categories.
      * @OA\Get(
-     *     path="/api/categories",
-     *     @OA\Response(response="200", description="Display a listing of projects.")
+     *      path="/categories",
+     *      operationId="getCategoriesList",
+     *      tags={"Categories"},
+     *      summary="Get list of categories",
+     *      description="Returns list of categories",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/CategoryResource")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
      * )
      * @return \Illuminate\Http\Resources\Json\AnonymousResourceCollection
      */
     public function index()
     {
         $categories = Category::filter()->simplePaginate();
-
         return CategoryResource::collection($categories);
     }
 
     /**
      * Display the specified category.
      *
+     * @OA\Get(
+     *      path="/categories/{id}",
+     *      operationId="getCategoryById",
+     *      tags={"Categories"},
+     *      summary="Get category information",
+     *      description="Returns category data",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Category id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *           @OA\JsonContent(ref="#/components/schemas/Category")
+     *
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Not Found"
+     *      )
+     * )
      * @param \App\Models\Category $category
      * @return \App\Http\Resources\CategoryResource
      */
@@ -41,7 +90,26 @@ class CategoryController extends Controller
 
     /**
      * Display a listing of the resource.
-     *
+    * @OA\Get(
+     *      path="/select/categories",
+     *      operationId="getSelectCategoriesList",
+     *      tags={"Categories"},
+     *      summary="Get list of Select categories",
+     *      description="Returns list of Select categories",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/CategoryResource")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
      * @return \Illuminate\Http\Resources\Json\AnonymousResourceCollection
      */
     public function select()
