# app/Http/Controllers/Controller.php
@@ -8,10 +8,32 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 
 
-/**
- * @OA\Info(title="L5 Swagger UI", version="0.1")
- */
+
 class Controller extends BaseController
 {
+    /**
+     * @OA\Info(
+     *      version="1.0.0",
+     *      title="Laravel OpenApi Demo Documentation",
+     *      description="L5 Swagger OpenApi description",
+     *      @OA\Contact(
+     *          email="admin@admin.com"
+     *      ),
+     *      @OA\License(
+     *          name="Apache 2.0",
+     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
+     *      )
+     * )
+     *
+     * @OA\Server(
+     *      url=L5_SWAGGER_CONST_HOST,
+     *      description="Demo API Server"
+     * )
+     *
+     * @OA\Tag(
+     *     name="Categories",
+     *     description="API Endpoints of Categories"
+     * )
+     */
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
 }
