# app/Virtual/Resources/CategoryResource.php
@@ -1,0 +1,22 @@
+<?php
+/**
+ * @OA\Schema(
+ *     title="CategoryResource",
+ *     description="Category resource",
+ *     @OA\Xml(
+ *         name="CategoryResource"
+ *     )
+ * )
+ */
+class CategoryResource
+{
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Virtual\Models\Category
+     */
+    private $data;
+}
